--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-redux": "^7.1.16",
     "@types/redux-logger": "^3.0.8",
     "axios": "^0.21.1",
+    "chartist": "^0.11.4",
     "install": "^0.13.0",
     "json-bigint": "^1.0.0",
     "json5": "^2.2.0",
@@ -25,6 +26,7 @@
     "material-ui-popup-state": "^1.7.1",
     "npm": "^7.5.3",
     "react": "^17.0.1",
+    "react-chartist": "^0.14.4",
     "react-dom": "^17.0.1",
     "react-material-ui-carousel": "^2.1.2",
     "react-redux": "^7.2.2",
