--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "install": "^0.13.0",
     "json-bigint": "^1.0.0",
     "json5": "^2.2.0",
+    "loglevel": "^1.7.1",
     "material-table": "^1.69.2",
     "material-ui-popup-state": "^1.7.1",
     "npm": "^7.5.3",
