--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^17.0.1",
     "react-chartist": "^0.14.4",
     "react-dom": "^17.0.1",
+    "react-full-screen": "^1.0.2",
     "react-material-ui-carousel": "^2.1.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
